# scratchrat

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  clip_wrapper.cpp  clip_wrapper.h  scratchrat.c
